force-app/main/default/objects/Org_Restriction__c/Org_Restriction__c.object-meta.xml
<CustomObject>
    <label>Org Restriction</label>
    <nameField>
        <displayFormat>ORN-{00000}</displayFormat>
        <label>Org Restriction Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Org Restrictions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>