force-app/main/default/objects/Org_Restriction__c/fields/Org__c.field-meta.xml
<CustomField>
    <fullName>Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Org</label>
    <referenceTo>Organisation__c</referenceTo>
    <relationshipLabel>Org Restrictions</relationshipLabel>
    <relationshipName>Org_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>