force-app/main/default/objects/Org_Restriction__c/fields/Repository__c.field-meta.xml
<CustomField>
    <fullName>Repository__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Repository</label>
    <referenceTo>Repository__c</referenceTo>
    <relationshipLabel>Org Restrictions</relationshipLabel>
    <relationshipName>Org_Restrictions</relationshipName>
    <type>Lookup</type>
</CustomField>