force-app/main/default/objects/Org_Restriction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Commit</fullName>
            </value>
            <value>
                <fullName>Deploy</fullName>
            </value>
            <value>
                <fullName>Path</fullName>
            </value>
            <value>
                <fullName>Locked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>